# apt_scrape

./: .env.example  .gitignore  README.md  apt  cli.py  docker-compose.yml  mcp_config_example.json  preferences.txt  pyproject.toml  requirements.txt  scrape_multiple_areas.sh  scrape_multiple_areas_casa.sh  server.py
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
apt_scrape/: analysis.py  cli.py  devctl.py  enrichment.py  export.py  notion_push.py  server.py
apt_scrape/sites/: __init__.py  base.py  casa.py  idealista.py  immobiliare.py
backend/: Dockerfile  db.py  main.py  requirements.txt  runner.py  scheduler.py
backend/routers/: configs.py  jobs.py  listings.py  preferences.py  sites.py
config/: default_areas.txt  default_areas_casa.txt  default_areas_idealista.txt  default_areas_immobiliare.txt
docs/: 2026-03-14-dashboard-improvements-implementation.md  running-locally.md
frontend/: api.py  app.py  requirements.txt
frontend/pages/: 1_Search_Configs.py  2_Monitor.py  4_Listings.py  6_Stats.py
scripts/: process_listings.py
sites/: base.py  casa.py  immobiliare.py
sites/configs/: casa.yaml
src/apt_scrape/: __init__.py  analysis.py  browser.py  (+12 more)
templates/: new_site_adapter.py
tests/: test_analysis.py  test_browser.py  test_cli_push.py  test_cookies.py  test_immobiliare.py  test_login_cli.py  test_models.py  test_notion_push.py  test_pipeline.py  test_proxy.py  test_rate_limit.py  test_retry.py  test_stages.py
(+84 files in other folders)
